--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -3,19 +3,24 @@
         <wm-page-content columnwidth="12" name="column1" padding="0px" class="login">
             <wm-container class="cl" width="100%" height="100%" backgroundimage="resources/images/imagelists/login-bg.png" backgroundrepeat="no-repeat" backgroundposition="0 0" backgroundsize="100% 100%" backgroundattachment="fixed" name="loginPageContainer">
                 <wm-layoutgrid name="loginGrid" height="100%">
-                    <wm-gridrow name="gridrow7" height="15%">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn10_2"></wm-gridcolumn>
+                    <wm-gridrow name="gridrow10">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn14_1" height="17px"></wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow name="gridrow9">
+                        <wm-gridcolumn columnwidth="12" name="gridcolumn13" class="col-xs-12" horizontalalign="center" height="72px"></wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6_1" class="logobg">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn10_1" horizontalalign="center" class="col-xs-12">
-                            <wm-picture name="picture1" picturesource="resources/images/imagelists/CX-Logo.png" height="67px" width="132px" margin="2em unset"></wm-picture>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn15_1"></wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn10_1" horizontalalign="center" class="col-xs-12">
+                            <wm-picture name="picture1" picturesource="resources/images/imagelists/CX-Logo.png" height="67px" width="132px" margin="2em unset unset unset"></wm-picture>
                         </wm-gridcolumn>
+                        <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="loginGridRow">
                         <wm-gridcolumn columnwidth="3" name="gridcolumn8" class="col-xs-1 col-md-4"></wm-gridcolumn>
                         <wm-gridcolumn name="loginContentColumn" columnwidth="6" class="col-xs-10  col-md-4">
                             <wm-container name="container1" class="panel" backgroundcolor="#ffffff" color="#bdbdbd">
-                                <wm-label name="label1" caption="User Login" horizontalalign="center" class="p" backgroundcolor="#f7f7f7" margin="0px unset" fontsize="20" padding="1em unset" color="#1e1e1e"></wm-label>
+                                <wm-label name="label1" caption="User Login" horizontalalign="center" class="p" backgroundcolor="#f7f7f7" margin="0px unset" fontsize="20" padding="1em unset" color="#000000"></wm-label>
                                 <wm-login name="loginForm" data-ng-controller="loginFormController" on-submit="loginFormSubmit($event, $scope)" title="" autocomplete="nofill">
                                     <wm-layoutgrid name="layoutgrid2">
                                         <wm-gridrow name="gridrow2">
@@ -24,7 +29,7 @@
                                                     <wm-container class="input-group-addon" name="container4">
                                                         <wm-icon name="icon1" iconclass="wi wi-person"></wm-icon>
                                                     </wm-container>
-                                                    <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
+                                                    <wm-text placeholder="Email Address" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
                                                 </wm-container>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -39,11 +44,11 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow6">
-                                            <wm-gridcolumn columnwidth="7" name="gridcolumn14" class="col-xs-7">
+                                            <wm-gridcolumn columnwidth="7" name="gridcolumn14" class="col-xs-7" horizontalalign="left">
                                                 <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                                             </wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="5" name="gridcolumn15" padding="1.15em unset 1em unset" horizontalalign="right" class="col-xs-5">
-                                                <wm-anchor name="anchor1" caption="Forgot Password?" on-click="Variables.goToPage_ForgotPassword.invoke()"></wm-anchor>
+                                            <wm-gridcolumn columnwidth="5" name="gridcolumn15" horizontalalign="right" class="col-xs-5">
+                                                <wm-anchor name="anchor1" caption="Forgot Password?" on-click="Variables.goToPage_ForgotPassword.invoke()" padding="1.1em 0.5em 1em 0.5em"></wm-anchor>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow4">
@@ -52,8 +57,11 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow8">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn11" horizontalalign="right">
-                                                <wm-anchor margin="1em 0.5em" name="anchor2" caption="Sign Up" on-click="Variables.goToPage_UserCreation.invoke()"></wm-anchor>
+                                            <wm-gridcolumn columnwidth="7" name="gridcolumn11" class="col-xs-7" horizontalalign="left">
+                                                <wm-label padding="1em 0.5em unset 0.8em" name="label2" caption="Don't have an account?"></wm-label>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="5" name="gridcolumn12" class="col-xs-5" horizontalalign="right">
+                                                <wm-anchor name="anchor2" caption="Sign Up Here" on-click="Variables.goToPage_UserCreation.invoke()" padding="1em 0.5em unset 0.5em"></wm-anchor>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
