--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -42,42 +42,47 @@
                                         <wm-livegrid formlayout="dialog" name="livegrid2">
                                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
-                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities"
+                                                readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
+                                                filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
+                                                filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="Add Municipality" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Municipality" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
-                                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.VendorApprovalsData.dataSet" captionalign="left"
-                                            captionposition="top" name="liveform2_12" insertmessage="Your application has been submitted to the municipality.">
+                                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.VendorApprovalsData.dataSet"
+                                            captionalign="left" captionposition="top" name="liveform2_12" insertmessage="Your application has been submitted to the municipality.">
                                                 <wm-layoutgrid columns="1" name="layoutgrid3">
                                                     <wm-gridrow name="gridrow11_0">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn12_0">
-                                                            <wm-label padding="unset 0.5em" name="label6" caption="Please select a municipality where you would like to do business, then use the &quot;+Add Municipality&quot; button to submit an application to that municipality. This will submit the information contained on your &quot;Company Profile&quot; page to the selected municipality for review."></wm-label>
+                                                            <wm-label padding="unset 0.5em" name="label6" caption="Please select a municipality where you would like to do business, then use the &quot;+Apply&quot; button to submit an application to that municipality. This will submit the information contained on your &quot;Company Profile&quot; page to the selected municipality for review."></wm-label>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                     <wm-gridrow name="gridrow11">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn12">
-                                                            <wm-form-field name="municipalities" displayname="What municipality would you like to do business with?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="false" required="true" widget="select"
-                                                            placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                            <wm-form-field name="municipalities" displayname="What municipality would you like to do business with?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true"
+                                                            readonly="false" required="true" widget="select" placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                     <wm-gridrow name="gridrow11_1">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn12_1">
-                                                            <wm-label padding="unset 0.5em" name="label6" caption="Note: some municipalities require the submission of an additional &quot;Contractor Application Form&quot; in order to be approved in their municipality. You will automatically be redirected to that form when you use the &quot;+Add Municipality&quot; button if it is required."></wm-label>
+                                                            <wm-label padding="unset 0.5em" name="label6" caption="Note: some municipalities require the submission of an additional &quot;Contractor Application Form&quot; in order to be approved in their municipality. You will automatically be redirected to that form when you use the &quot;+Apply&quot; button if it is required."></wm-label>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
-                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
-                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="false" primary-key="false" generator="assigned" key="approvalStatus" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                defaultvalue="Pending"></wm-form-field>
-                                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentVendorObj.dataSet"
-                                                datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
-                                                <wm-form-action key="save" display-name="Add Municipality" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null" type="button"
+                                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value"
+                                                dataset="bind:Variables.CurrentVendorObj.dataSet" datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
+                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="false" primary-key="false" generator="assigned" key="approvalStatus" type="string" readonly="false" required="false"
+                                                widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="Pending"></wm-form-field>
+                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number"
+                                                placeholder=""></wm-form-field>
+                                                <wm-form-action key="save" display-name="Apply" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null"
+                                                type="button" update-mode="true"></wm-form-action>
+                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
                                                 update-mode="true"></wm-form-action>
-                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                             </wm-liveform>
                                         </wm-livegrid>
                                     </wm-gridcolumn>
