--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -34,7 +34,7 @@
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="1" name="gridcolumn119"></wm-gridcolumn>
                                     </wm-gridrow>
-                                    <wm-gridrow name="gridrow46_1">
+                                    <wm-gridrow name="gridrow46_1" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="1" name="gridcolumn120"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="10" name="gridcolumn90_1">
                                             <wm-html name="html1" content="bind:Variables.lvFormType.dataSet.data[$i].instructions" margin="unset unset 1em unset">
